WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128536
[wk2] REGRESSION (
r162710
): Open tab urls not restored after switching to new Safari build
https://bugs.webkit.org/show_bug.cgi?id=128536
Summary
[wk2] REGRESSION (r162710): Open tab urls not restored after switching to new...
Tim Horton
Reported
2014-02-10 09:19:36 PST
http://trac.webkit.org/changeset/162710
changed the WebBackForwardListCF serialization without providing a way to import sessions in the old format. <
rdar://problem/15911839
>
Attachments
patch
(11.25 KB, patch)
2014-02-10 10:25 PST
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
patch
(3.25 KB, patch)
2014-02-19 11:45 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
flipped a condition
(3.25 KB, patch)
2014-02-19 11:53 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-02-10 10:25:05 PST
Created
attachment 223723
[details]
patch
Tim Horton
Comment 2
2014-02-10 17:05:40 PST
Anders comments that he thinks we should just do the revert of CurrentSessionStateDataVersion and not fail the import if a SnapshotUUID doesn't exist, instead of bumping sessionHistoryCurrentVersion.
Tim Horton
Comment 3
2014-02-19 11:45:30 PST
Created
attachment 224660
[details]
patch
Tim Horton
Comment 4
2014-02-19 11:53:36 PST
Created
attachment 224661
[details]
flipped a condition
WebKit Commit Bot
Comment 5
2014-02-19 12:39:29 PST
Comment on
attachment 224661
[details]
flipped a condition Clearing flags on attachment: 224661 Committed
r164381
: <
http://trac.webkit.org/changeset/164381
>
WebKit Commit Bot
Comment 6
2014-02-19 12:39:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug